Agregada funcionalidad de edicion de nombre y auto close en itemslide

--- a/src/pages/terminados/terminados.component.html
+++ b/src/pages/terminados/terminados.component.html
@@ -7,4 +7,5 @@
 <ion-content>
     <img src="../../assets/imgs/completados.jpg">
 
+    <app-lista [listasTerminadas]="true"></app-lista>
 </ion-content>
