--- a/src/pages/pendientes/pendientes.component.html
+++ b/src/pages/pendientes/pendientes.component.html
@@ -8,25 +8,7 @@
 
     <img src="../../assets/imgs/pendientes.jpg">
 
-    <ion-list>
-        <ion-item-sliding *ngFor="let lista of tareasService.listas">
-           
-            <button ion-item (click)="editarLista(lista)">
-                {{ lista.titulo }}
-                <ion-note item-end>
-                    {{ lista.items.length }} items
-                </ion-note>
-            </button>
-            
-            <ion-item-options side="right">
-                <button ion-button color="danger" (click)="eliminarLista(lista)">
-                    <ion-icon name="trash"></ion-icon>
-                    Eliminar
-                </button>
-            </ion-item-options>
-        </ion-item-sliding>
-    </ion-list>
-
+    <app-lista [listasTerminadas]="false"></app-lista>
 
     <!-- Botton FAB agregar nueva lista -->
     <ion-fab right bottom (click)="nuevaLista()">
